--- a/1-basic-implementation/build.gradle
+++ b/1-basic-implementation/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation("io.coil-kt:coil:1.2.1")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
